--- a/healthandharmony/public/index.html
+++ b/healthandharmony/public/index.html
@@ -477,7 +477,7 @@
               </div>
               <!--/.bg-holder-->
 
-              <h1 class="text-center">APPOINTMENT</h1>
+              <h1 class="text-center">SET YOUR APPOINTMENT</h1>
             </div>
           </div>
         </div>
